[package]
authors = ["Without Boats <woboats@gmail.com>", "Carl Lerche <me@carllerche.com>", "Armin Ronacher <armin.ronacher@active-4.com>"]
name = "tokio-redis"
version = "0.2.0"

[dependencies]
futures = "0.1"
log = "0.3.6"
tokio-core = "0.1.6"
tokio-io = "0.1.1"

[dependencies.tokio-proto]
git = "https://github.com/withoutboats/tokio-proto"
branch = "new-new-service"

[dependencies.tokio-service]
git = "https://github.com/withoutboats/tokio-service"
branch = "new-new-service"

[dev-dependencies]
env_logger = "0.3.0"
